[project]
name = "first-in-line"
version = "0.1.0"
description = "Job scraper that sends you a Discord notification shortly after job is posted"
authors = [{ name = "Corey Michaud", email = "cor3y.michaud@gmail.com" }]
requires-python = ">=3.9"

dependencies = [
    "playwright",
    "aiohttp",
    "python-dotenv"
]

[tool.playwright]
install = true

packages = [
  "src"
]
